# M1-2022-git-workflow

./: README.md  converter.py  main.py  pyproject.toml  test_converter.py
.github/workflows/: coverage.yml  main.yml  python-package.yml  python-publish.yml
